# builder-profile

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  sonar-project.properties
.claude/commands/: StartOfTheDay.md  WrapUpForTheDay.md  updateClaude.md
.context/retros/: 2026-06-07-1.json
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/workflows/: ci.yml  close-the-loop.yml  security.yml
docs/: git-native-signals.md  pre-commit-hooks.md  repository-setup.md
docs/development/: AGENT_BEST_PRACTICES.md  branch-workflow.md  startoftheday-permissions.md
scripts/: setup-hooks.sh  setup-repo.sh
scripts/hooks/: pre-push
src/builder_profile/: aggregate_commits.py  behavioral.py  cache.py  cli.py  correlator.py  decisions.py  discovery.py  git_collector.py  html_report.py  issue_collector.py  llm.py  memory_collector.py  models.py  parser.py  report.py  retro_collector.py  scoring.py  stats_collector.py  synthesis.py  tui.py  work_streams.py
tests/unit/: test_aggregate_commits.py  test_cache.py  test_correlator.py  test_decisions.py  test_discovery.py  test_example.py  test_git_collector.py  test_html_report.py  test_issue_collector.py  test_llm.py  test_parser.py  test_report.py  test_scoring.py  test_synthesis.py  test_tui.py  test_work_streams.py
